Setup GitHub Actions workflows to built wheels for Python 3.10

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -28,6 +28,9 @@ jobs:
         - python-version: 3.9
           pyo3-python: /opt/python/cp39-cp39/bin/python
           image-tag: latest
+        - python-version: '3.10'
+          pyo3-python: /opt/python/cp310-cp310/bin/python
+          image-tag: latest
         - python-version: pypy-3.6
           pyo3-python: /opt/pypy/pypy3.6-7.3.3/bin/python
           image-tag: 2021-05-18-1e72e6c
@@ -68,6 +71,7 @@ jobs:
         - 3.7
         - 3.8
         - 3.9
+        - '3.10'
         - pypy-3.6
         - pypy-3.7
     steps:
@@ -102,6 +106,9 @@ jobs:
           image-tag: latest
         - python-version: 3.9
           pyo3-python: /opt/python/cp39-cp39/bin/python
+          image-tag: latest
+        - python-version: '3.10'
+          pyo3-python: /opt/python/cp310-cp310/bin/python
           image-tag: latest
     steps:
     - name: Checkout code
@@ -146,6 +153,9 @@ jobs:
         - python-version: 3.9
           pyo3-python: /opt/python/cp39-cp39/bin/python
           image-tag: latest
+        - python-version: '3.10'
+          pyo3-python: /opt/python/cp310-cp310/bin/python
+          image-tag: latest
     steps:
     - name: Download built wheels
       uses: actions/download-artifact@v2
@@ -176,6 +186,7 @@ jobs:
         - 3.7
         - 3.8
         - 3.9
+        - '3.10'
         - pypy-3.7
     steps:
     - name: Checkout code
@@ -211,6 +222,7 @@ jobs:
         - 3.7
         - 3.8
         - 3.9
+        - '3.10'
         - pypy-3.7
     steps:
     - name: Setup Python ${{ matrix.python-version }}
@@ -238,6 +250,7 @@ jobs:
         - 3.7
         - 3.8
         - 3.9
+        - '3.10'
         #- pypy-3.6
         - pypy-3.7
     steps:
@@ -273,6 +286,7 @@ jobs:
         - 3.7
         - 3.8
         - 3.9
+        - '3.10'
         #- pypy-3.6
         - pypy-3.7
     steps:
