--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,9 @@ jobs:
         - python-version: 3.9
           python-release: v3.9
           python-impl: CPython
+        - python-version: '3.10'
+          python-release: v3.10
+          python-impl: CPython
         - python-version: pypy-3.6
           python-release: v3.6
           python-impl: PyPy
@@ -95,6 +98,9 @@ jobs:
         - python-version: 3.9
           python-release: v3.9
           python-impl: CPython
+        - python-version: '3.10'
+          python-release: v3.10
+          python-impl: CPython
         - python-version: pypy-3.7
           python-release: v3.7
           python-impl: PyPy
@@ -156,6 +162,9 @@ jobs:
           python-impl: CPython
         - python-version: 3.9
           python-release: v3.9
+          python-impl: CPython
+        - python-version: '3.10'
+          python-release: v3.10
           python-impl: CPython
         - python-version: pypy-3.7
           python-release: v3.7
