--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,8 @@ python_requires = >=3.5
 setup_requires =
     setuptools >=46.4
     cython ~=0.29.16
+
+[options.entry_points]
 console_scripts =
     pyrodigal = pyrodigal.cli:main
 
