Add an initial JOSS paper draft in the `paper` directory

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -375,6 +375,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v1
+      with:
+        submodules: true
     - name: Release a Changelog
       uses: rasmus-saks/release-a-changelog-action@v1.0.1
       with:
