Inline functions used for nucleotide matching using an additional C header

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 # Added manually
 
 ### Cython ###
-pyrodigal/*.c
-pyrodigal/*.h
+pyrodigal/_pyrodigal.c
+pyrodigal/_pyrodigal.h
 pyrodigal/*.html
 pyrodigal/*.BAK
 
