Update documentation and project metadata with JOSS paper references

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ project_urls =
     Changelog = https://github.com/althonos/pyrodigal/blob/master/CHANGELOG.md
     Coverage = https://codecov.io/gh/althonos/pyrodigal/
     Builds = https://github.com/althonos/pyrodigal/actions
-    Zenodo = https://doi.org/10.5281/zenodo.4015169
+    Paper = https://doi.org/10.21105/joss.04296
     PyPI = https://pypi.org/project/pyrodigal
 
 [options]
