Update MyPy configuration in `setup.cfg` to only check type hints of the Cython extensions

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,7 +71,7 @@ exclude_lines =
     return NotImplemented
     raise MemoryError()
 
-[mypy]
+[mypy-pyrodigal._pyrodigal]
 disallow_any_decorated = true
 disallow_any_generics = true
 disallow_any_unimported = false
@@ -81,4 +81,3 @@ disallow_untyped_defs = true
 ignore_missing_imports = true
 warn_unused_ignores = true
 warn_return_any = true
-exclude = pyrodigal/tests/*
