--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -338,12 +338,35 @@ jobs:
         name: dist
         path: dist/*
 
+  test-sdist:
+    runs-on: ubuntu-latest
+    name: Test source distribution
+    needs:
+    - sdist
+    steps:
+    - name: Setup Python 3.10
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+    - name: Download built wheels
+      uses: actions/download-artifact@v2
+      with:
+          name: dist
+          path: dist
+    - name: Update pip to latest version
+      run: python -m pip install -U pip setuptools wheel
+    - name: Install built wheel
+      run: python -m pip install --no-binary pyrodigal --no-index --find-links=dist pyrodigal
+    - name: Run tests without coverage
+      run: python -m unittest pyrodigal.tests -vv
+
   upload:
     environment: PyPI
     runs-on: ubuntu-latest
     name: Upload
     needs:
     - sdist
+    - test-sdist
     - wheel-linux
     - test-linux
     - wheel-linux-aarch64
