Add `CITATION.cff` file with JOSS paper reference [ci skip]

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include COPYING
 include CHANGELOG.md
 include CONTRIBUTING.md
 include README.md
+include CITATION.cff
 
 recursive-include pyrodigal/tests      *.py *.txt
 recursive-include pyrodigal/tests/data *
