--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -382,7 +382,6 @@ jobs:
           name: dist
           path: dist
     - name: Publish distributions to PyPI
-      if: "startsWith(github.ref, 'refs/tags/v')"
       uses: pypa/gh-action-pypi-publish@master
       with:
         user: __token__
@@ -392,7 +391,6 @@ jobs:
   release:
     environment: GitHub Releases
     runs-on: ubuntu-latest
-    if: "startsWith(github.ref, 'refs/tags/v')"
     name: Release
     needs: upload
     steps:
@@ -408,6 +406,7 @@ jobs:
   aur:
     environment: Arch Linux User Repository
     runs-on: ubuntu-latest
+    if: "!contains(github.ref, 'rc')"
     name: Update AUR package
     needs:
     - sdist
