Rewrite tests using `importlib.resources` to manage embedded data

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,19 +40,21 @@ project_urls =
 
 [options]
 zip_safe = false
-packages = pyrodigal, pyrodigal.tests
+packages = pyrodigal, pyrodigal.tests, pyrodigal.tests.data
 include_package_data = true
 python_requires = >=3.5
 setup_requires =
     setuptools >=46.4
     cython ~=0.29.16
+tests_require =
+    importlib-resources ; python_version < '3.7'
 
 [options.entry_points]
 console_scripts =
     pyrodigal = pyrodigal.cli:main
 
 [options.package_data]
-pyrodigal = py.typed, *.pyi
+pyrodigal = py.typed, *.pyi, *.pxd
 pyrodigal.tests = data/*
 
 [coverage:run]
