--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,6 +70,8 @@ jobs:
       run: python -m pip install -U pip wheel setuptools
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
+    - name: Install test requirements
+      run: python -m pip install -r pyrodigal/tests/requirements.txt
     - name: Build C extension in debug mode
       run: python setup.py build_ext --inplace --debug
     - name: Test without coverage
@@ -136,6 +138,8 @@ jobs:
       run: python -m pip install -U pip wheel setuptools
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
+    - name: Install test requirements
+      run: python -m pip install -r pyrodigal/tests/requirements.txt
     - name: Build C extension in debug mode
       run: python setup.py build_ext --inplace --debug
     - name: Test without coverage
@@ -197,6 +201,8 @@ jobs:
       run: python -m pip install -U pip wheel setuptools
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
+    - name: Install test requirements
+      run: python -m pip install -r pyrodigal/tests/requirements.txt
     - name: Build C extension
       run: python setup.py build_ext --inplace
     - name: Test without coverage
