Add tests for Python 3.11 in `test.yml` Actions workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,9 @@ jobs:
         - python-version: '3.10'
           python-release: v3.10
           python-impl: CPython
+        - python-version: '3.11'
+          python-release: v3.11
+          python-impl: CPython
         - python-version: pypy-3.6
           python-release: v3.6
           python-impl: PyPy
@@ -104,6 +107,9 @@ jobs:
         - python-version: '3.10'
           python-release: v3.10
           python-impl: CPython
+        - python-version: '3.11'
+          python-release: v3.11
+          python-impl: CPython
         - python-version: pypy-3.7
           python-release: v3.7
           python-impl: PyPy
@@ -171,6 +177,9 @@ jobs:
           python-impl: CPython
         - python-version: '3.10'
           python-release: v3.10
+          python-impl: CPython
+        - python-version: '3.11'
+          python-release: v3.11
           python-impl: CPython
         - python-version: pypy-3.7
           python-release: v3.7
