--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -7,341 +7,209 @@ on:
 
 jobs:
 
-  wheel-linux:
-    runs-on: ubuntu-latest
-    name: Build Linux wheels
-    strategy:
-      matrix:
-        include:
-        - python-version: 3.5
-          pyo3-python: /opt/python/cp35-cp35m/bin/python
-          image: "pypywheels/manylinux2010-pypy_x86_64:2020-12-11-f1e0e80"
-        - python-version: 3.6
-          pyo3-python: /opt/python/cp36-cp36m/bin/python
-          image: "pypywheels/manylinux2010-pypy_x86_64:2021-05-18-1e72e6c"
-        - python-version: 3.7
-          pyo3-python: /opt/python/cp37-cp37m/bin/python
-          image: "pypywheels/manylinux2010-pypy_x86_64:latest"
-        - python-version: 3.8
-          pyo3-python: /opt/python/cp38-cp38/bin/python
-          image: "pypywheels/manylinux2010-pypy_x86_64:latest"
-        - python-version: 3.9
-          pyo3-python: /opt/python/cp39-cp39/bin/python
-          image: "pypywheels/manylinux2010-pypy_x86_64:latest"
-        - python-version: '3.10'
-          pyo3-python: /opt/python/cp310-cp310/bin/python
-          image: "pypywheels/manylinux2010-pypy_x86_64:latest"
-        - python-version: '3.11'
-          pyo3-python: /opt/python/cp311-cp311/bin/python
-          image: "quay.io/pypa/manylinux2014_x86_64:latest"
-        - python-version: pypy-3.6
-          pyo3-python: /opt/pypy/pypy3.6-7.3.3/bin/python
-          image: "pypywheels/manylinux2010-pypy_x86_64:2021-05-18-1e72e6c"
-        - python-version: pypy-3.7
-          pyo3-python: /opt/pypy/pypy3.7-7.3.4/bin/python
-          image: "pypywheels/manylinux2010-pypy_x86_64:latest"
-        - python-version: pypy-3.8
-          pyo3-python: /opt/python/pp38-pypy38_pp73/bin/python
-          image: "quay.io/pypa/manylinux2014_x86_64:latest"
-        - python-version: pypy-3.9
-          pyo3-python: /opt/python/pp39-pypy39_pp73/bin/python
-          image: "quay.io/pypa/manylinux2014_x86_64:latest"
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        submodules: true
-    - name: Build manylinux wheels
-      uses: addnab/docker-run-action@v2
-      with:
-        image: ${{ matrix.image }}
-        options: -v ${{ github.workspace }}:/io -e TERM=$TERM
-        shell: bash
-        run: |
-          ${{ matrix.pyo3-python }} -m pip install -U -r /io/.github/workflows/requirements.txt
-          ${{ matrix.pyo3-python }} -m pip wheel -vv /io -w /tmp
-          for whl in /tmp/*.whl; do ${{ matrix.pyo3-python }} -m auditwheel repair $whl -w /io/dist; done
-    - name: Store built wheels
-      uses: actions/upload-artifact@v2
-      with:
-        name: dist
-        path: dist/*
-
-  test-linux:
-    runs-on: ubuntu-latest
-    name: Test Linux wheels
-    needs:
-    - wheel-linux
-    strategy:
-      matrix:
-        python-version:
-        - 3.5
-        - 3.6
-        - 3.7
-        - 3.8
-        - 3.9
-        - '3.10'
-        - '3.11'
-    steps:
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Download built wheels
-      uses: actions/download-artifact@v2
-      with:
-          name: dist
-          path: dist
-    - name: Update pip to latest version
-      run: python -m pip install -U pip setuptools wheel
-    - name: Install built wheel
-      run: python -m pip install --no-index --find-links=dist pyrodigal
-    - name: Run tests without coverage
-      run: python -m unittest pyrodigal.tests -vv
-
   wheel-linux-aarch64:
-    runs-on: ubuntu-latest
-    name: Build Linux Aarch64 wheels
+    name: Build Linux wheels (Aarch64)
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        include:
-        - python-version: 3.6
-          pyo3-python: /opt/python/cp36-cp36m/bin/python
-          image-tag: latest
-        - python-version: 3.7
-          pyo3-python: /opt/python/cp37-cp37m/bin/python
-          image-tag: latest
-        - python-version: 3.8
-          pyo3-python: /opt/python/cp38-cp38/bin/python
-          image-tag: latest
-        - python-version: 3.9
-          pyo3-python: /opt/python/cp39-cp39/bin/python
-          image-tag: latest
-        - python-version: '3.10'
-          pyo3-python: /opt/python/cp310-cp310/bin/python
-          image-tag: latest
-        - python-version: '3.11'
-          pyo3-python: /opt/python/cp311-cp311/bin/python
-          image-tag: latest
+        python-tag:
+        - cp36-manylinux_aarch64
+        - cp37-manylinux_aarch64
+        - cp38-manylinux_aarch64
+        - cp39-manylinux_aarch64
+        - cp310-manylinux_aarch64
+        - cp311-manylinux_aarch64
+        - pp37-manylinux_aarch64
+        - pp38-manylinux_aarch64
+        - pp39-manylinux_aarch64
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: true
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
-    - name: Build manylinux wheels
-      uses: addnab/docker-run-action@v2
-      with:
-        image: quay.io/pypa/manylinux2014_aarch64:${{ matrix.image-tag }}
-        options: -v ${{ github.workspace }}:/io -e TERM=$TERM
-        shell: bash
-        run: |
-          ${{ matrix.pyo3-python }} -m pip install -U -r /io/.github/workflows/requirements.txt
-          ${{ matrix.pyo3-python }} -m pip wheel -vv /io -w /tmp
-          for whl in /tmp/*.whl; do ${{ matrix.pyo3-python }} -m auditwheel repair $whl -w /io/dist; done
-    - name: Store built wheels
-      uses: actions/upload-artifact@v2
-      with:
-        name: dist
-        path: dist/*
-
-  test-linux-aarch64:
-    runs-on: ubuntu-latest
-    name: Test Linux Aarch64 wheels
-    needs:
-    - wheel-linux-aarch64
-    strategy:
-      matrix:
-        include:
-        - python-version: 3.6
-          pyo3-python: /opt/python/cp36-cp36m/bin/python
-          image-tag: latest
-        - python-version: 3.7
-          pyo3-python: /opt/python/cp37-cp37m/bin/python
-          image-tag: latest
-        - python-version: 3.8
-          pyo3-python: /opt/python/cp38-cp38/bin/python
-          image-tag: latest
-        - python-version: 3.9
-          pyo3-python: /opt/python/cp39-cp39/bin/python
-          image-tag: latest
-        - python-version: '3.10'
-          pyo3-python: /opt/python/cp310-cp310/bin/python
-          image-tag: latest
-        - python-version: '3.11'
-          pyo3-python: /opt/python/cp311-cp311/bin/python
-          image-tag: latest
-    steps:
-    - name: Download built wheels
-      uses: actions/download-artifact@v2
-      with:
-          name: dist
-          path: dist
     - name: Set up QEMU
       id: qemu
-      uses: docker/setup-qemu-action@v1
-    - name: Test built wheels
-      uses: addnab/docker-run-action@v2
+      uses: docker/setup-qemu-action@v2
       with:
-        image: quay.io/pypa/manylinux2014_aarch64:${{ matrix.image-tag }}
-        options: -v ${{ github.workspace }}:/io -e TERM=$TERM
-        shell: bash
-        run: |
-          ${{ matrix.pyo3-python }} -m pip install pyrodigal --no-index --find-links=/io/dist
-          ${{ matrix.pyo3-python }} -m unittest pyrodigal.tests -vv
-
-  wheel-osx:
-    runs-on: macos-latest
-    name: Build OSX wheels
-    strategy:
-      matrix:
-        python-version:
-        - 3.5
-        - 3.6
-        - 3.7
-        - 3.8
-        - 3.9
-        - '3.10'
-        - '3.11'
-        - pypy-3.7
-        - pypy-3.8
-        - pypy-3.9
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+        platforms: all
+    - name: Build manylinux wheels
+      uses: pypa/cibuildwheel@v2.11.3
+      env:
+        CIBW_ARCHS: aarch64
+        CIBW_BUILD: ${{ matrix.python-tag }}
+        CIBW_BUILD_VERBOSITY: 2
+        CIBW_BEFORE_BUILD: pip install cython
+        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests
+        CIBW_TEST_REQUIRES: importlib-resources
       with:
-        submodules: true
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+        output-dir: dist
+    - uses: actions/upload-artifact@v3
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Python requirements
-      run: python -m pip install -r .github/workflows/requirements.txt
-    - name: Build Cython extension
-      run: python setup.py build_ext
-    - name: Build wheel distribution
-      run: python setup.py bdist_wheel
-    - name: Store built wheels
-      uses: actions/upload-artifact@v2
-      with:
-        name: dist
+        name: wheels
         path: dist/*
 
-  test-osx:
-    runs-on: macos-latest
-    name: Test OSX wheels
-    needs:
-    - wheel-osx
+  wheel-linux-x86_64:
+    name: Build Linux wheels (x86-64)
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version:
-        - 3.5
-        - 3.6
-        - 3.7
-        - 3.8
-        - 3.9
-        - '3.10'
-        - '3.11'
-        - pypy-3.7
-        - pypy-3.8
-        - pypy-3.9
+        python-tag:
+        - cp36-manylinux_x86_64
+        - cp37-manylinux_x86_64
+        - cp38-manylinux_x86_64
+        - cp39-manylinux_x86_64
+        - cp310-manylinux_x86_64
+        - cp311-manylinux_x86_64
+        - pp37-manylinux_x86_64
+        - pp38-manylinux_x86_64
+        - pp39-manylinux_x86_64
     steps:
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Download built wheels
-      uses: actions/download-artifact@v2
-      with:
-          name: dist
-          path: dist
-    - name: Install built wheel
-      run: python -m pip install --no-index --find-links=dist pyrodigal
-    - name: Run tests without coverage
-      run: python -m unittest pyrodigal.tests -vv
-
-  wheel-windows:
-    runs-on: windows-latest
-    name: Build Windows wheels
-    strategy:
-      matrix:
-        python-version:
-        - 3.5
-        - 3.6
-        - 3.7
-        - 3.8
-        - 3.9
-        - '3.10'
-        - '3.11'
-        - pypy-3.7
-        - pypy-3.8
-        - pypy-3.9
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: true
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: actions-rs/toolchain@v1
       with:
-        python-version: ${{ matrix.python-version }}
-        architecture: x64
-    - name: Install Python requirements
-      run: python -m pip install -r .github/workflows/requirements.txt
-    - name: Build wheel distribution
-      run: python setup.py bdist_wheel
-    - name: Store built wheels
-      uses: actions/upload-artifact@v2
+        toolchain: stable
+        override: true
+    - name: Build manylinux wheels
+      uses: pypa/cibuildwheel@v2.11.3
+      env:
+        CIBW_ARCHS: x86_64
+        CIBW_BUILD: ${{ matrix.python-tag }}
+        CIBW_BEFORE_BUILD: pip install cython
+        CIBW_BUILD_VERBOSITY: 2
+        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests
+        CIBW_TEST_REQUIRES: importlib-resources
       with:
-        name: dist
+        output-dir: dist
+    - uses: actions/upload-artifact@v3
+      with:
+        name: wheels
         path: dist/*
 
-  test-windows:
-    runs-on: windows-latest
-    name: Test Windows wheels
-    needs:
-    - wheel-windows
+  wheel-macos-x86_64:
+    name: Build MacOS wheels (x86-64)
+    runs-on: macOS-11
     strategy:
       matrix:
-        python-version:
-        - 3.5
-        - 3.6
-        - 3.7
-        - 3.8
-        - 3.9
-        - '3.10'
-        - '3.11'
-        - pypy-3.7
-        - pypy-3.8
-        - pypy-3.9
+        python-tag:
+        - cp36-macosx_x86_64
+        - cp37-macosx_x86_64
+        - cp38-macosx_x86_64
+        - cp39-macosx_x86_64
+        - cp310-macosx_x86_64
+        - cp311-macosx_x86_64
+        - pp37-macosx_x86_64
+        - pp38-macosx_x86_64
+        - pp39-macosx_x86_64
     steps:
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v3
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Download built wheels
-      uses: actions/download-artifact@v2
+        submodules: true
+    - uses: actions-rs/toolchain@v1
       with:
-          name: dist
-          path: dist
-    - name: Install built wheel
-      run: python -m pip install --no-index --find-links=dist pyrodigal
-    - name: Run tests without coverage
-      run: python -m unittest pyrodigal.tests -vv
+        toolchain: stable
+        override: true
+    - name: Build manylinux wheels
+      uses: pypa/cibuildwheel@v2.11.3
+      env:
+        CIBW_ARCHS: x86_64
+        CIBW_BUILD: ${{ matrix.python-tag }}
+        CIBW_BEFORE_BUILD: pip install cython
+        CIBW_BUILD_VERBOSITY: 2
+        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests
+        CIBW_TEST_REQUIRES: importlib-resources
+      with:
+        output-dir: dist
+    - uses: actions/upload-artifact@v3
+      with:
+        name: wheels
+        path: dist/*
+
+  wheel-macos-aarch64:
+    name: Build MacOS wheels (Aarch64)
+    runs-on: macOS-11
+    strategy:
+      matrix:
+        python-tag:
+        - cp38-macosx_arm64
+        - cp39-macosx_arm64
+        - cp310-macosx_arm64
+        - cp311-macosx_arm64
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: true
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
+        target: aarch64-apple-darwin
+    - name: Build manylinux wheels
+      uses: pypa/cibuildwheel@v2.11.3
+      env:
+        CIBW_ARCHS: arm64
+        CIBW_BUILD: ${{ matrix.python-tag }}
+        CIBW_BEFORE_BUILD: pip install cython
+        CIBW_BUILD_VERBOSITY: 2
+        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests
+        CIBW_TEST_REQUIRES: importlib-resources
+      with:
+        output-dir: dist
+    - uses: actions/upload-artifact@v3
+      with:
+        name: wheels
+        path: dist/*
+
+  wheel-win32-x86_64:
+    name: Build Windows wheels (x86-64)
+    runs-on: windows-2019
+    strategy:
+      matrix:
+        python-tag:
+        - cp36-win_amd64
+        - cp37-win_amd64
+        - cp38-win_amd64
+        - cp39-win_amd64
+        - cp310-win_amd64
+        - cp311-win_amd64
+        - pp37-win_amd64
+        - pp38-win_amd64
+        - pp39-win_amd64
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: true
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
+    - name: Build manylinux wheels
+      uses: pypa/cibuildwheel@v2.11.3
+      env:
+        CIBW_ARCHS: AMD64
+        CIBW_BUILD: ${{ matrix.python-tag }}
+        CIBW_BEFORE_BUILD: pip install cython
+        CIBW_BUILD_VERBOSITY: 2
+        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests
+        CIBW_TEST_REQUIRES: importlib-resources
+      with:
+        output-dir: dist
+    - uses: actions/upload-artifact@v3
+      with:
+        name: wheels
+        path: dist/*
 
   sdist:
     runs-on: ubuntu-latest
     name: Build source distribution
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: true
-    - name: Set up Python 3.9
+    - name: Set up Python 3.11
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: 3.11
     - name: Install build requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Build source distribution
@@ -358,10 +226,10 @@ jobs:
     needs:
     - sdist
     steps:
-    - name: Setup Python 3.10
+    - name: Setup Python 3.11
       uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: '3.11'
     - name: Download built wheels
       uses: actions/download-artifact@v2
       with:
@@ -381,39 +249,34 @@ jobs:
     needs:
     - sdist
     - test-sdist
-    - wheel-linux
-    - test-linux
     - wheel-linux-aarch64
-    - test-linux-aarch64
-    - wheel-osx
-    - test-osx
-    - wheel-windows
-    - test-windows
+    - wheel-linux-x86_64
+    - wheel-macos-aarch64
+    - wheel-macos-x86_64
+    - wheel-win32-x86_64
     steps:
-    - name: Download built wheels
-      uses: actions/download-artifact@v2
+    - uses: actions/download-artifact@v2
       with:
-          name: dist
-          path: dist
-    - name: Publish distributions to PyPI
-      uses: pypa/gh-action-pypi-publish@master
+        name: wheels
+        path: dist
+    - uses: pypa/gh-action-pypi-publish@master
+      if: startsWith(github.ref, 'refs/tags')
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
-        skip_existing: false
+        skip_existing: true
 
   release:
     environment: GitHub Releases
     runs-on: ubuntu-latest
+    if: "!contains(github.ref, 'rc')"
     name: Release
     needs: upload
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v1
+    - uses: actions/checkout@v3
       with:
         submodules: true
-    - name: Release a Changelog
-      uses: rasmus-saks/release-a-changelog-action@v1.0.1
+    - uses: rasmus-saks/release-a-changelog-action@v1.0.1
       with:
         github-token: '${{ secrets.GITHUB_TOKEN }}'
 
@@ -426,8 +289,7 @@ jobs:
     - sdist
     - upload
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       with:
         submodules: true
     - name: Set up Python 3.10
