--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -147,7 +147,7 @@ jobs:
     - name: Install test requirements
       run: python -m pip install -r pyrodigal/tests/requirements.txt
     - name: Build C extension in debug mode
-      run: python setup.py build_ext --inplace --debug
+      run: python setup.py build_ext --inplace --debug --plat-name macos-x86_64
     - name: Test without coverage
       run: python -m unittest discover -vv
 
