--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -38,7 +38,7 @@ jobs:
         CIBW_BUILD: ${{ matrix.python-tag }}
         CIBW_BUILD_VERBOSITY: 2
         CIBW_BEFORE_BUILD: pip install cython
-        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests
+        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests -vv
         CIBW_TEST_REQUIRES: importlib-resources
       with:
         output-dir: dist
@@ -77,7 +77,7 @@ jobs:
         CIBW_BUILD: ${{ matrix.python-tag }}
         CIBW_BEFORE_BUILD: pip install cython
         CIBW_BUILD_VERBOSITY: 2
-        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests
+        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests -vv
         CIBW_TEST_REQUIRES: importlib-resources
       with:
         output-dir: dist
@@ -116,7 +116,7 @@ jobs:
         CIBW_BUILD: ${{ matrix.python-tag }}
         CIBW_BEFORE_BUILD: pip install cython
         CIBW_BUILD_VERBOSITY: 2
-        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests
+        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests -vv
         CIBW_TEST_REQUIRES: importlib-resources
       with:
         output-dir: dist
@@ -151,7 +151,7 @@ jobs:
         CIBW_BUILD: ${{ matrix.python-tag }}
         CIBW_BEFORE_BUILD: pip install cython
         CIBW_BUILD_VERBOSITY: 2
-        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests
+        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests -vv
         CIBW_TEST_REQUIRES: importlib-resources
       with:
         output-dir: dist
@@ -190,7 +190,7 @@ jobs:
         CIBW_BUILD: ${{ matrix.python-tag }}
         CIBW_BEFORE_BUILD: pip install cython
         CIBW_BUILD_VERBOSITY: 2
-        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests
+        CIBW_TEST_COMMAND: python -m unittest pyrodigal.tests -vv
         CIBW_TEST_REQUIRES: importlib-resources
       with:
         output-dir: dist
@@ -217,7 +217,7 @@ jobs:
     - name: Store built source distribution
       uses: actions/upload-artifact@v2
       with:
-        name: dist
+        name: wheels
         path: dist/*
 
   test-sdist:
@@ -233,7 +233,7 @@ jobs:
     - name: Download built wheels
       uses: actions/download-artifact@v2
       with:
-          name: dist
+          name: wheels
           path: dist/
     - name: Update pip to latest version
       run: python -m pip install -U pip setuptools wheel
