--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -228,8 +228,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: '3.11'
-          python-release: v3.11
+        - python-version: 3.9
+          python-release: v3.9
           python-impl: CPython
     steps:
     - name: Checkout code
