Fix AUR package generation in `package.yml` Actions workflow [ci skip]

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -299,7 +299,7 @@ jobs:
     - name: Download built wheels
       uses: actions/download-artifact@v2
       with:
-          name: dist
+          name: wheels
           path: dist
     - name: Extract package version
       run: echo PKGVER=$(python setup.py --version) >> $GITHUB_ENV
