Override Python target detection when building on MacOS for Python 3.11

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,6 +85,7 @@ jobs:
     runs-on: macos-latest
     env:
       OS: OSX
+      _PYTHON_HOST_PLATFORM: macosx-10.9-x86_64
     strategy:
       fail-fast: false
       matrix:
