Update CLI to support `gz` or `bz2` compressed input

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,10 @@ setup_requires =
 tests_require =
     importlib-resources ; python_version < '3.7'
 
+[options.extras_require]
+isal = 
+    isal ~=1.1
+
 [options.entry_points]
 console_scripts =
     pyrodigal = pyrodigal.cli:main
