--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,8 @@ python_requires = >=3.5
 setup_requires =
     setuptools >=46.4
     cython ~=0.29.16
+install_requires =
+    archspec ~=0.2.1
 tests_require =
     importlib-resources ; python_version < '3.7'
 
