--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -228,6 +228,8 @@ jobs:
   upload:
     environment: PyPI
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     name: Upload
     needs:
     - sdist
@@ -242,12 +244,8 @@ jobs:
       with:
         name: wheels
         path: dist
-    - uses: pypa/gh-action-pypi-publish@master
+    - uses: pypa/gh-action-pypi-publish@release/v1
       if: startsWith(github.ref, 'refs/tags')
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        skip_existing: true
 
   release:
     environment: GitHub Releases
