--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,10 @@ tests_require =
 [options.extras_require]
 isal = 
     isal ~=1.1
+lz4 =
+    lz4 ~=4.0
+zst =
+    zstandard ~=0.22
 
 [options.entry_points]
 console_scripts =
