--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,7 +4,7 @@ cython ~=3.0
 
 # sphinx documentation dependencies
 semantic_version ~=2.8
-sphinx ~=4.0
+sphinx >=4.0
 recommonmark ~=0.7
 pygments-style-monokailight ~=0.4
 ipython ~=7.19
