Use SPDX license qualifier in `PKGBUILD.in` and `setup.cfg` [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ url = https://github.com/althonos/pyrodigal
 description = Cython bindings and Python interface to Prodigal, an ORF finder for genomes and metagenomes.
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = GPLv3
+license = GPL-3.0-only
 platform = any
 keywords = bioinformatics, genome, orf, gene, prodigal
 classifier =
