--- a/pkg/aur/PKGBUILD.in
+++ b/pkg/aur/PKGBUILD.in
@@ -7,15 +7,13 @@ pkgrel=1
 pkgdesc="Cython bindings to Prodigal, an ORF finder for genomes and metagenomes"
 url="https://github.com/althonos/pyrodigal"
 arch=('i686' 'pentium4' 'x86_64' 'arm' 'armv6h' 'armv7h' 'aarch64')
-license=("LGPL3")
-groups=()
-makedepends=('python-setuptools' 'cython' 'python-build' 'python-installer')
+license=("GPL-3.0-only")
 depends=('python' 'python-archspec')
+makedepends=('python-setuptools' 'cython' 'python-build' 'python-installer')
 optdepends=('python-isal: fast gzip decompression support'
             'python-lz4: lz4 decompression support'
             'python-zstandard: zstd decompression support')
 source=("https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
-noextract=()
 sha256sums=(%sha256sum)
 
 build() {
