Use MacOS 11 to test package in GitHub Actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,7 +70,7 @@ jobs:
 
   test_osx:
     name: Test (OSX)
-    runs-on: macos-latest
+    runs-on: macos-11
     env:
       OS: OSX
       _PYTHON_HOST_PLATFORM: macosx-10.9-x86_64
