--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,9 @@ jobs:
         - python-version: pypy-3.9
           python-release: v3.9
           python-impl: PyPy
+        - python-version: pypy-3.10
+          python-release: v3.10
+          python-impl: PyPy
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -108,6 +111,9 @@ jobs:
         - python-version: pypy-3.9
           python-release: v3.9
           python-impl: PyPy
+        - python-version: pypy-3.10
+          python-release: v3.10
+          python-impl: PyPy
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
@@ -166,6 +172,9 @@ jobs:
           python-impl: PyPy
         - python-version: pypy-3.9
           python-release: v3.9
+          python-impl: PyPy
+        - python-version: pypy-3.10
+          python-release: v3.10
           python-impl: PyPy
     steps:
     - name: Checkout code
