Implement splitting of Prodigal's `training.c` file in `meson.build`

--- a/meson.build
+++ b/meson.build
@@ -1,13 +1,18 @@
 project(
-  'pyrodigal', 
+  'pyrodigal',
   'c', 'cython',
   version : '3.4.1',
   # default_options : ['warning_level=0']
 )
 
-# 
+# Load C compiler and check if `-lm` is needed
 cc = meson.get_compiler('c')
-m_dep = cc.find_library('m')
+m_dep = cc.find_library('m', required : false)
+
+# load Python dependencies
+py_mod = import('python')
+python = py_mod.find_installation(pure: false)
+py_dep = python.dependency()
 
 
 # --- SIMD detection -----------------------------------------------------------
@@ -45,7 +50,7 @@ sse2_supported = cc.compiles(sse2_code, name : 'SSE2', args : [])
 sse2_flags = ['-D__SSE2__']
 if not sse2_supported
   sse2_supported = cc.compiles(sse2_code, name : 'SSE with -msse2', args : ['-msse2'])
-  if sse2_supported 
+  if sse2_supported
     sse2_flags += '-msse2'
   endif
 endif
@@ -67,7 +72,7 @@ avx2_supported = cc.compiles(avx2_code, name : 'AVX2', args : [])
 avx2_flags = ['-D__AVX2__']
 if not avx2_supported
   avx2_supported = cc.compiles(avx2_code, name : 'AVX2 with -mavx2', args : ['-mavx2'])
-  if avx2_supported 
+  if avx2_supported
     avx2_flags += '-mavx2'
   endif
 endif
@@ -90,7 +95,7 @@ avx512_supported = cc.compiles(avx512_code, name : 'AVX512', args : [])
 avx512_flags = ['-D__AVX512F__']
 if not avx512_supported
   avx512_supported = cc.compiles(avx512_code, name : 'AVX512 with -mavx512bw -mavx512f', args : ['-mavx512f', '-mavx512bw'])
-  if avx512_supported 
+  if avx512_supported
     avx512_flags += ['-mavx512f', '-mavx512bw']
   endif
 endif
@@ -112,7 +117,7 @@ neon_supported = cc.compiles(neon_code, name : 'NEON', args : [])
 neon_flags = ['-D__ARM_NEON__']
 if not neon_supported
   neon_supported = cc.compiles(neon_code, name : 'NEON with -mfpu=neon', args : ['-mfpu=neon'])
-  if neon_supported 
+  if neon_supported
     neon_flags += '-mfpu=neon'
   endif
 endif
@@ -120,15 +125,35 @@ endif
 
 # --- Prodigal -----------------------------------------------------------------
 
+training_splits = ['training_header.c']
+foreach i : range(50)
+  training_splits += 'training@0@.c'.format(i)
+endforeach
+
+# split training.c
+training = custom_target(
+    'training',
+    input : 'vendor/Prodigal/training.c',
+    output : training_splits,
+    command : [
+      python,
+      meson.current_source_dir() / 'tools' / 'split_training.py',
+      '--input',
+      '@INPUT@',
+      '--output-dir',
+      '@OUTDIR@'
+    ],
+)
+
 # build Prodigal as a library
 prodigal_sources = [
     'vendor/Prodigal/bitmap.c',
-    'vendor/Prodigal/dprog.c', 
-    'vendor/Prodigal/gene.c', 
-    'vendor/Prodigal/metagenomic.c', 
+    'vendor/Prodigal/dprog.c',
+    'vendor/Prodigal/gene.c',
+    'vendor/Prodigal/metagenomic.c',
     'vendor/Prodigal/node.c',
-    'vendor/Prodigal/sequence.c', 
-    'vendor/Prodigal/training.c', 
+    'vendor/Prodigal/sequence.c',
+    training.to_list()
 ]
 
 prodigal_inc = include_directories(
@@ -144,11 +169,6 @@ prodigal = static_library('prodigal',
 
 # --- Pyrodigal ----------------------------------------------------------------
 
-# load Python dependencies
-py_mod = import('python')
-python = py_mod.find_installation(pure: false)
-py_dep = python.dependency()
-
 # check if `PyInterpreterState_GetID` is available
 getid_code = (
   '''
@@ -163,7 +183,7 @@ getid_code = (
   '''
 )
 has_getid = cc.compiles(
-  getid_code, 
+  getid_code,
   dependencies : py_dep,
   name :  'PyInterpreterState_GetID',
   args : ['-Werror=implicit-function-declaration'],
